--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Déploiement de site web</h1>
 <p>Utilisation de GitHub et de Netlify</p>
+<img src="img/chat.jpg"  alt="chat">
 </body>
 </html>
