--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Déploiement de site web</h1>
 <p>Utilisation de GitHub et de Netlify</p>
+<p>modif du soir...</p>
 <img src="img/chat.jpg"  alt="chat">
 </body>
 </html>
