--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Déploiement de site web</h1>
 <p>Utilisation de GitHub et de Netlify</p>
 <p>modif du soir...</p>
+<h2>TE AMO ELIZABEEETTHHH</h2>
 <img src="img/chat.jpg"  alt="chat">
 </body>
 </html>
